--- a/ghs_ops_platform.html
+++ b/ghs_ops_platform.html
@@ -11,7 +11,7 @@
   --black:#111; --dark:#1e2428; --grey:#4a5568; --grey-lt:#8a9ab0;
   --border:#d4dde6; --bg:#f2f5f8; --white:#fff;
   --green:#2e9e68; --green-lt:#e6f7ef; --red:#d94f4f; --red-lt:#fdeaea;
-  --amber:#e8a020; --amber-lt:#fdf3e3;
+  --amber:#e8a020; --amber-lt:#fdf3e3;h
 }
 *{box-sizing:border-box;margin:0;padding:0;}
 body{font-family:'Open Sans',sans-serif;background:var(--bg);color:var(--dark);min-height:100vh;font-size:14px;}
@@ -758,7 +758,7 @@ function typeBadge(t) {
 // ════════════════════════════════════
 //  NAV
 // ════════════════════════════════════
-function navTo(page, el) {
+function navTo(page, el) { closeAllModals();
   document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
   document.querySelectorAll('.nav-item').forEach(n => n.classList.remove('active'));
   document.getElementById('page-' + page).classList.add('active');
