--- a/ghs_ops_platform.html
+++ b/ghs_ops_platform.html
@@ -119,7 +119,7 @@ tbody tr:hover{background:var(--blue-lt);}
 /* ── MODAL ── */
 .overlay{display:none;position:fixed;inset:0;background:rgba(0,0,0,.45);z-index:500;backdrop-filter:blur(2px);}
 .overlay.open{display:flex;align-items:center;justify-content:center;}
-.modal{background:var(--white);border-radius:8px;width:680px;max-width:95vw;max-height:90vh;overflow:hidden;display:flex;flex-direction:column;box-shadow:0 20px 60px rgba(0,0,0,.25);animation:modalIn .22s ease;}
+.modal{background:var(--white);border-radius:8px;width:680px;max-width:95vw;max-height:90vh;overflow:hidden;display:flex;flex-direction:column;box-shadow:0 20px 60px rgba(0,0,0,.25);animation:modalIn .22s ease;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);z-index:501;}
 .modal.modal-lg{width:860px;}
 .modal.modal-xl{width:1060px;}
 @keyframes modalIn{from{transform:scale(.95) translateY(10px);opacity:0}to{transform:scale(1) translateY(0);opacity:1}}
